<resources>
    <string name="app_name">MusicMix</string>
    <string name="title_songs">Title Songs</string>
    <string name="years">Years</string>
    <string name="musician">Musician</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="lyrics">Lyrics</string>
    <string name="about">About</string>
    <string name="title_about">ABOUT</string>
    <string name="share">SHARE</string>
    <string name="profile">I Putu Wira Budhi Guna Ariyasa</string>
    <string name="email">wirbud1134@gmail.com</string>
    <string-array name="data_title">
        <item>Bunga Tidur</item>
        <item>Cahaya</item>
        <item>Delusi</item>
        <item>Here With Me</item>
        <item>Interaksi</item>
        <item>Kau Rumahku</item>
        <item>Komang</item>
        <item>Ku Kira Kau Rumah</item>
        <item>Senja Diaksara Bintang</item>
        <item>Until I Found You</item>
    </string-array>
    <string-array name="data_years">
        <item>2014</item>
        <item>2016</item>
        <item>2018</item>
        <item>2023</item>
        <item>2022</item>
        <item>2022</item>
        <item>2022</item>
        <item>2020</item>
        <item>2018</item>
        <item>2021</item>
    </string-array>
    <string-array name="data_musician">
        <item>Tulus</item>
        <item>Tulus</item>
        <item>Hal</item>
        <item>D4vd</item>
        <item>Tulus</item>
        <item>Raissa Anggiani</item>
        <item>Raim Laode</item>
        <item>Amigdala</item>
        <item>Rio Satrio</item>
        <item>Stephen Sanchez</item>
    </string-array>
    <string-array name="data_album">
        <item>Gajah</item>
        <item>Monokrom</item>
        <item>Perspektif</item>
        <item>I Love You Be My Valentine</item>
        <item>Manusia</item>
        <item>Kau Rumahku</item>
        <item>Komang</item>
        <item>Ku Kira Kau Rumah</item>
        <item>Senja</item>
        <item>I Love You Be My Valentine</item>
    </string-array>
    <string-array name="data_genre">
        <item>Indonesian Pop</item>
        <item>Indonesian Pop</item>
        <item>Indonesian Pop</item>
        <item>Alternatif/Indie</item>
        <item>Indonesian Pop</item>
        <item>Indonesian Pop</item>
        <item>Indonesian Indie</item>
        <item>Indonesian Pop</item>
        <item>Indonesian Pop</item>
        <item>Alternatif/Indie</item>
    </string-array>
    <string-array name="data_duration">
        <item>3:32</item>
        <item>3:16</item>
        <item>4:30</item>
        <item>4:02</item>
        <item>2:50</item>
        <item>4:35</item>
        <item>3:43</item>
        <item>3:27</item>
        <item>4:01</item>
        <item>2:56</item>
    </string-array>
</resources>