<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detail_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            tools:src="@tools:sample/avatars" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_title_songs"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/title_songs" />

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:text="@string/title_songs" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tvYears"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/years" />

                <TextView
                    android:id="@+id/tv_detail_years"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:text="@string/years" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tvMusician"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/musician" />

                <TextView
                    android:id="@+id/tv_detail_musician"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:text="@string/musician" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tv_album"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/album" />

                <TextView
                    android:id="@+id/tv_detail_album"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:text="@string/album" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/tv_detail_genre"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:text="@string/genre" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/duration" />

                <TextView
                    android:id="@+id/tv_detail_duration"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:text="@string/duration" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvLyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/lyrics" />

        <TextView
            android:id="@+id/tv_detail_lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            tools:text="@string/lyrics" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:text="@string/share"/>

    </LinearLayout>

</ScrollView>