<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="10dp"
    card_view:cardCornerRadius="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_music"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_titleSongs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/img_music"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_music"
            card_view:layout_constraintTop_toTopOf="@+id/img_music"
            tools:text="@string/title_songs" />

        <TextView
            android:id="@+id/tv_years"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_musician"
            card_view:layout_constraintEnd_toEndOf="@id/tv_titleSongs"
            card_view:layout_constraintStart_toStartOf="@+id/tv_titleSongs"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_titleSongs"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/years" />

        <TextView
            android:id="@+id/tv_musician"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_music"
            card_view:layout_constraintEnd_toEndOf="@id/tv_titleSongs"
            card_view:layout_constraintStart_toStartOf="@+id/tv_titleSongs"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_years"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/musician" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>